# asset-conversion-example

./: .gitignore  NOTICE  README.md
polkadot-js/: .gitignore  .pnp.cjs  README.md  index.js  package-lock.json  package.json
polkadot-js/docs/: README.md
subxt/: Cargo.toml
subxt/docs/: README.md
subxt/metadata/: asset_hub_metadata.json  asset_hub_metadata.scale  metadata.scale
subxt/src/: main.rs
txwrapper/docs/: README.md
zombienet/: config.toml  westend_network.toml
