[package]
name = "asset-conversion-example"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
scale-info = "2.11.3"
scale-value = "0.16.0"
scale-bits = "0.6.0"
scale-decode = "0.13.0"
scale-encode = "0.7.0"
futures = { version = "0.3.30", default-features = false, features = ["std"] }
hex = "0.4.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["raw_value"] }
thiserror = "1.0.61"
tracing = "0.1.40"
frame-metadata = { version = "16.0.0", default-features = false, features = ["current", "std"] }
derivative = "2.2.0"
either = "1.12.0"
subxt = "0.44.0"
subxt-signer = { version = "0.44.0", features = ["subxt"]}
tokio = { version = "1.37", features = ["macros", "time", "rt-multi-thread"] }

# For ss58 encoding AccountId32 to serialize them properly:
base58 = { version = "0.2.0" }
blake2 = { version = "0.10.4", default-features = false }

[dev-dependencies]
bitvec = { version = "1", default-features = false }
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive", "bit-vec"] }
scale-info = { version = "2.11.3", features = ["bit-vec"] }
sp-core = { version = "31.0.0", default-features = false }
sp-keyring = "34.0.0"
sp-runtime = "34.0.0"
assert_matches = "1.5.0"
